name:                markdown-monparsing
version:             0.1.0.0
synopsis:            Parsing markdown with Haskell
homepage:            https://github.com/geo2a/markdown_monparsing
license-file:        LICENSE
author:              Georgiy Lukjanov
maintainer:          georgiylukjanov@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable markdown-monparsing
  main-is:             Main.hs
  other-modules:       Helpers,
                       Parsers,
                       MDParse,
                       HTMLGen
  build-depends:       base>=4.6,
                       mtl>=2.2.1,
                       monoid-subclasses >= 0.4.0.4,
                       directory
  hs-source-dirs:      src
                       src/Utils
                       src/Parsers
                       src/Renderers
  Default-Language: Haskell2010

test-suite Commom-Parsers-Test
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      tests,
                       src/Parsers,
                       src/Utils
  other-modules:       Parsers,
                       Helpers
  build-depends:       base >= 4 && < 5,
                       mtl,
                       monoid-subclasses >= 0.4.0.4,
                       HUnit,
                       tasty >= 0.7,
                       tasty-hunit
